docs: update PROGRESS_UPDATE with resolved issues as of 2026-03-31
Mark lazy-loading and Java 25 blockers as fixed, update current
project state to reflect fully working facilitator dashboard.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>